--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,10 @@
     <artifactId>commons-csv</artifactId>
     <version>1.5</version>
         <dependency>
-
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
